fix load time on smaller devices.

--- a/client/assets/css/main.css
+++ b/client/assets/css/main.css
@@ -131,6 +131,16 @@ input, select, textarea {
 			transition: none !important;
 		}
 
+		@media screen and (min-width: 768px) {
+			body {
+				background-color: #2e3141;
+				background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/bg.jpg");
+				background-size: auto, cover;
+				background-attachment: fixed, fixed;
+				background-position: center, center;
+			}
+		}
+
 /* Type */
 
 	body, input, select, textarea {
@@ -3501,7 +3511,7 @@ input, select, textarea {
 			#banner {
 				padding: 7em 0 8.25em 0 ;
 				background-color: #2e3141;
-				background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/bg.jpg");
+/* 				background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/bg.jpg"); */
 				background-size: auto,
  cover;
 				background-position: center,
@@ -3509,6 +3519,17 @@ input, select, textarea {
 				margin-bottom: -6.5em;
 			}
 
+		}
+
+		@media screen and (min-width: 768px) {
+			#banner {
+				padding: 9em 0 6.25em 0 ;
+				background-color: #2e3141;
+				background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/bg.jpg");
+				background-size: auto, cover;
+				background-position: center, 0% 30%;
+				margin-bottom: -6.5em;
+			}
 		}
 
 		@media screen and (max-width: 980px) {
@@ -3613,7 +3634,7 @@ input, select, textarea {
 		#wrapper > header {
 			padding: 9em 0 6.25em 0 ;
 			background-color: #2e3141;
-			background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/bg.jpg");
+/* 			background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/bg.jpg"); */
 			background-size: auto,
  cover;
 			background-position: center,
@@ -3621,6 +3642,17 @@ input, select, textarea {
 			margin-bottom: -6.5em;
 		}
 
+	}
+
+	@media screen and (min-width: 768px) {
+		#wrapper > header {
+			padding: 9em 0 6.25em 0 ;
+			background-color: #2e3141;
+			background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/bg.jpg");
+			background-size: auto, cover;
+			background-position: center, 0% 30%;
+			margin-bottom: -6.5em;
+		}
 	}
 
 	@media screen and (max-width: 980px) {
@@ -4110,7 +4142,7 @@ input, select, textarea {
 
 		#footer {
 			background-color: #2e3141;
-			background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/bg.jpg");
+/* 			background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/bg.jpg"); */
 			background-size: auto,
  cover;
 			background-position: center,
@@ -4119,6 +4151,17 @@ input, select, textarea {
 			padding-top: 6.5em;
 		}
 
+	}
+
+	@media screen and (min-width: 768px) {
+		#footer {
+			background-color: #2e3141;
+			background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/bg.jpg");
+			background-size: auto, cover;
+			background-position: center, center;
+			margin-top: -6.5em;
+			padding-top: 6.5em;
+		}
 	}
 
 	@media screen and (max-width: 980px) {
